tests/golden/defaults/appuio-reporting-aldebaran/appuio-reporting-aldebaran/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: appuio-reporting
    app.kubernetes.io/part-of: syn
    name: appuio-reporting-aldebaran
    openshift.io/cluster-monitoring: 'true'
  name: appuio-reporting-aldebaran
