tests/golden/defaults/appuio-reporting-aldebaran/appuio-reporting-aldebaran/01_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: appuio-reporting
    app.kubernetes.io/part-of: syn
    name: allow-from-appuio-reporting-aldebaran
  name: allow-from-appuio-reporting-aldebaran
  namespace: vshn-appuio-mimir
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: appuio-reporting-aldebaran
  podSelector: {}
  policyTypes:
    - Ingress
